--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Jekyll Theme Quickstart Demo
 description: "Demonstrate build a template them on GitHub Pages"
 
-github_username: MichaelCurrin
+github_username: mtearle
 
 ### Build settings ###
 
